<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        tools:context=".HomeFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:contentDescription="@string/lotto_logo"
            android:src="@drawable/lotery_logo" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="@string/insert_your_name"
            android:hint="@string/insert_your_name"
            android:inputType="text"
            android:background="@color/white"
            android:text=""
            />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/next"
            android:textSize="20sp"
            android:layout_gravity="end"/>
    </LinearLayout>
</layout>