<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        tools:context=".SecondFragment"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/lotto_number"
            android:src="@drawable/billar_ball_logo"
            android:background="@drawable/circle"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:text="@string/your_lottery_number_is"
            android:layout_marginHorizontal="20dp"
            />


        <TextView
            android:id="@+id/numbers_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@android:color/background_light"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="1.6"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textAlignment="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:id="@+id/share_button" />

    </LinearLayout>

</layout>